@@ -1,3 +1,7 @@
+2011-06-26  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-toolbar.el: Add minor-mode menu item - goto-address-mode.
+
 2011-06-25  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (grep-current-dir): Fix grep.
